# Rext-rust-web-framework

./: .env  Cargo.toml  README.md
examples/: redis_test.rs  testing.rs  websocket_client.rs
src/: application_factory.rs  auth.rs  lib.rs  main.rs  mongo_persistence.rs  persistence.rs  room.rs  secrets.rs  server.rs  server_errors.rs  services.rs  socket.rs  user.rs  utils.rs  websocket.rs
src/app/: application_dao.rs  application_service.rs  dao.rs  service.rs  user.rs
src/app/user/: user_dao.rs  user_model.rs  user_routes.rs  user_service.rs
src/persistence/: redis_provider.rs
src/services/: application_dao.rs  application_service.rs  collections.rs  dao.rs  dto.rs  service.rs  user.rs
src/services/user/: user_dao.rs  user_dao1.rs  user_model.rs  user_model1.rs
src/websocket/: messages.rs  redis_pubsub.rs  room.rs  socket.rs  websocket_handler.rs  websocket_server.rs
