[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
anyhow = { version = "1.0.75", features = ["backtrace"] }
thiserror = "1.0.48"
future-utils = "0.12.1"
url = "2.4.0"
reqwest = { verredission = "0.11.22", features = ["json"] }
log = "0.4.20"
env_logger = "0.10.0"
uuid = { vesion = "1.4.1", features = ["v4"] }
futures = "0.3.28"
jsonwebtoken = "8.3.0"
argon2 = "0.5.0"
once_cell = "1.17.1"
dotenv = "0.15.0"
mongodb = { version = "2.5.0", features = ["tokio-runtime"] }
async-trait = "0.1.73"
chrono = { version = "0.4.31", features = ["serde"] }
bson = { version = "2.7.0", features = ["chrono-0_4"] }
strum = { version = "0.25", features = ["derive"] }
redis = { version = "0.23.3", features = ["tokio-comp", "connection-manager"] }


[dev-dependencies]
tokio-tungstenite = "0.20.1"
http = "0.2.9"

[lib]
name = "axum_test"
path = "src/lib.rs"

[[bin]]
name = "axum_test"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
